k8s/spack/packages-spack-io/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spack-packages
  namespace: spack
spec:
  tls:
  - secretName: tls-packages
  rules:
  - host: packages.spack.io
    http:
      paths:
      - backend:
          service:
            name: spack-packages
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
